--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -12,21 +12,21 @@
     <title>JAC Enterprises Home</title>
 </head>
 
-<header>
-    <nav class="navbar">
-        <img src="images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
-        <ul class="nav_list">
-            <li class="nav_searchbar">
-                <section class="searchbar"></section>
-            </li>
-            <li><a href="" class="nav_tours_link">Tours</a></li>
-            <li><a href="" class="nav_about_link">About</a></li>
-            <li><a href="" class="nav_faq_link">Faq</a></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
+    <header>
+        <nav class="navbar">
+            <img src="images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+            <ul class="nav_list">
+                <li class="nav_searchbar">
+                    <section class="searchbar"></section>
+                </li>
+                <li><a href="" class="nav_tours_link">Tours</a></li>
+                <li><a href="" class="nav_about_link">About</a></li>
+                <li><a href="" class="nav_faq_link">FAQ</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section class="top_container">
         <div class="amazon">
             <h1 class="motto">Vincit Qui Se Vincit</h1>
@@ -59,13 +59,13 @@
             <img src="" alt="" class="hiking_pic_link">
         </div>
     </section>
+
+    <footer>
+        <p class="copyright">&copy JAC Enterprises</p>
+        <a href="" class="terms_conditions">Terms & Conditions</a>
+        <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a>
+        <p class="rights_reserved">All Rights Reserved.</p>
+    </footer>
+
 </body>
-
-<footer>
-    <p class="copyright">&copy JAC Enterprises</p>
-    <a href="" class="terms_conditions">Terms & Conditions</a>
-    <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a>
-    <p class="rights_reserved">All Rights Reserved.</p>
-</footer>
-
 </html>
