altered footer and added css to faq

--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +13,17 @@
 </head>
 
 <body>
+
     <header>
         <nav class="navbar">
-            <img src="images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+            <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
             <ul class="nav_list">
                 <li class="nav_searchbar">
                     <section class="searchbar"></section>
                 </li>
                 <li><a href="" class="nav_tours_link">Tours</a></li>
                 <li><a href="" class="nav_about_link">About</a></li>
-                <li><a href="" class="nav_faq_link">FAQ</a></li>
+                <li><a href="faq.html" class="nav_faq_link">FAQ</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +32,7 @@
         <div class="amazon">
             <h1 class="motto">Vincit Qui Se Vincit</h1>
             <!--Bright bold white lettering over picture-->
-            <img class="amazon_pic" src="images/amazon_rainforest.jpg" alt="Pic of rainforest">
+            <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="Pic of rainforest">
         </div>
         <h2 class="jac_intro">A little about JAC Enterprises</h2>
         <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. In distinctio sunt modi recusandae
@@ -44,7 +45,7 @@
             <p class="bird_watching">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi earum error saepe,
                 minus quas facere, id iure laborum harum quia dolorum. Molestias natus vero explicabo obcaecati
                 distinctio adipisci tempore cupiditate.</p>
-            <img src="images/toucan.jpg" alt="" class="bird_pic">
+            <img src="../images/toucan.jpg" alt="" class="bird_pic">
             <p class="bird_watching_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptate
                 expedita hic nesciunt fugiat nobis, vitae omnis ut, modi alias unde, et dolor quasi a ab ad sed numquam
                 tempora.</p>
@@ -60,11 +61,10 @@
         </div>
     </section>
 
+    <hr>
+
     <footer>
-        <p class="copyright">&copy JAC Enterprises</p>
-        <a href="" class="terms_conditions">Terms & Conditions</a>
-        <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a>
-        <p class="rights_reserved">All Rights Reserved.</p>
+        <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
     </footer>
 
 </body>
