--- a/src/main/resources/static/pages/faq.html
+++ b/src/main/resources/static/pages/faq.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <title>FAQ</title>
 </head>
 <body>
+
+  <header>
+    <nav class="navbar">
+        <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+        <ul class="nav_list">
+            <li class="nav_searchbar">
+                <section class="searchbar"></section>
+            </li>
+            <li><a href="" class="nav_tours_link">Tours</a></li>
+            <li><a href="" class="nav_about_link">About</a></li>
+            <li><a href="faq.html" class="nav_faq_link">FAQ</a></li>
+        </ul>
+    </nav>
+</header>
 
 <h2>FAQ</h2>
 
@@ -32,6 +48,12 @@
         </p>
     </li>
 </ol>
+
+<hr>
+
+<footer>
+  <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+</footer>
 
 </body>
 </html>
