CSS modified, FAQ modified

--- a/src/main/resources/static/pages/faq.html
+++ b/src/main/resources/static/pages/faq.html
@@ -17,43 +17,47 @@
             </li>
             <li><a href="" class="nav_tours_link">Tours</a></li>
             <li><a href="" class="nav_about_link">About</a></li>
-            <li><a href="faq.html" class="nav_faq_link">FAQ</a></li>
+            <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
         </ul>
     </nav>
-</header>
+  </header>
 
-<h2>FAQ</h2>
+  <h2>FAQ</h2>
 
-<ol>
-    <li>
-        <h4>What do I need to bring to a tour?</h4>
-        <p>
-            Please bring your tour confirmation ticket along with snacks and water.
-            Any special equipment you might need is provided by us, but you are
-            welcome to bring your own.
-        </p>
-    </li>
-    <li>
-        <h4>What forms of payment do you accept?</h4>
-        <p>
-            We accept all major credit cards, electronic check, and Paypal.
-            If you would like to set up a payment plan, please contact us at
-            555-555-5555 to connect with a customer service representative.
-        </p>
-    </li>
-    <li>
-        <h4>May I take a bird home with me?</h4>
-        <p>
-            No.
-        </p>
-    </li>
-</ol>
+  <ol>
+      <li>
+          <h4>What do I need to bring to a tour?</h4>
+          <p>
+              Please bring your tour confirmation ticket along with snacks and water.
+              Any special equipment you might need is provided by us, but you are
+              welcome to bring your own.
+          </p>
+      </li>
+      <li>
+          <h4>What forms of payment do you accept?</h4>
+          <p>
+              We accept all major credit cards, electronic check, and Paypal.
+              If you would like to set up a payment plan, please contact us at
+              555-555-5555 to connect with a customer service representative.
+          </p>
+      </li>
+      <li>
+          <h4>May I take a bird home with me?</h4>
+          <p>
+              No.
+          </p>
+      </li>
+  </ol>
 
-<hr>
+  <div id="return">
+    <a href="index.html">Return Home</a>
+  </div>
 
-<footer>
-  <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
-</footer>
+  <hr>
+
+  <footer>
+    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
