--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -14,19 +14,19 @@
 
 <body>
 
-    <header>
-        <nav class="navbar">
-            <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
-            <ul class="nav_list">
-                <li class="nav_searchbar">
-                    <section class="searchbar"></section>
-                </li>
-                <li><a href="" class="nav_tours_link">Tours</a></li>
-                <li><a href="" class="nav_about_link">About</a></li>
-                <li><a href="faq.html" class="nav_faq_link">FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav class="navbar">
+        <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+        <ul class="nav_list">
+            <li class="nav_searchbar">
+                <section class="searchbar"></section>
+            </li>
+            <li><a href="" class="nav_tours_link">Tours</a></li>
+            <li><a href="" class="nav_about_link">About</a></li>
+            <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
+        </ul>
+    </nav>
+</header>
 
     <section class="top_container">
         <div class="amazon">
