Moved static pages

--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -30,7 +30,7 @@
             </li>
             <li><a href="" class="nav_tours_link">Tours</a></li>
             <li><a href="" class="nav_about_link">About</a></li>
-            <li><a href="Faq" class="nav_faq_link">Faq</a></li>
+            <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
         </ul>
     </nav>
 </header>
