--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -15,18 +15,19 @@
 <body>
 
   <header>
-      <div><form th:action="@{/}">
-          Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
-          &nbsp;
-          <input type="submit" value="Search" />
-          &nbsp;
-          <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
-      </form></div>
+      
     <nav class="navbar">
+        
         <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+        <div class="searchbar"><form th:action="@{/}">
+            Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+            &nbsp;
+            <input type="submit" value="Search" />
+            &nbsp;
+            <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+        </form></div>
         <ul class="nav_list">
             <li class="nav_searchbar">
-                <section class="searchbar"></section>
             </li>
             <li><a href="" class="nav_tours_link">Tours</a></li>
             <li><a href="" class="nav_about_link">About</a></li>
@@ -41,31 +42,26 @@
             <!--Bright bold white lettering over picture-->
             <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="Pic of rainforest">
         </div>
-        <h2 class="jac_intro">A little about JAC Enterprises</h2>
-        <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. In distinctio sunt modi recusandae
-            nisi facilis nulla eum ipsa rerum sapiente voluptatem possimus quia adipisci, architecto consequuntur, dicta
-            atque. Repudiandae, at.</p>
+        <h2 class="jac_intro">JAC Enterprises</h2>
+        <p class="intro">JAC Enterprises is an organization that specializes in offering niche adventures dedicated to learning about Earth's various ecosystems and unique terrains. Our motto is, "Vincit Qui Se Vincit" which means, "He/she conquers who conquers him/herself."</p>
     </section>
 
     <section class="middle_container">
         <div class="bird_part">
-            <p class="bird_watching">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi earum error saepe,
-                minus quas facere, id iure laborum harum quia dolorum. Molestias natus vero explicabo obcaecati
-                distinctio adipisci tempore cupiditate.</p>
+            <p class="bird_watching">Bird Watching</p>
             <img src="../images/toucan.jpg" alt="" class="bird_pic">
-            <p class="bird_watching_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptate
-                expedita hic nesciunt fugiat nobis, vitae omnis ut, modi alias unde, et dolor quasi a ab ad sed numquam
-                tempora.</p>
-
         </div>
+        <p class="bird_watching_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptate
+            expedita hic nesciunt fugiat nobis, vitae omnis ut, modi alias unde, et dolor quasi a ab ad sed numquam
+            tempora.</p>
     </section>
 
     <section class="bottom_container">
         <div class="tours_part">
             <h2 class="tours_heading">Tours We Offer</h2>
-            <img src="" alt="" class="skywalk_pic_link">
-            <img src="" alt="" class="riverboat_pic_link">
-            <img src="" alt="" class="hiking_pic_link">
+            <img src="../images/canopywalk.jpg" alt="Picture of Canopy Bridge" class="skywalk_pic_link">
+            <img src="../images/riverhomepgpic.jpg" alt="" class="riverboat_pic_link">
+            <img src="../images/hikehomepgpic.jpg" alt="Picture of Forest" class="hiking_pic_link">
         </div>
     </section>
 
