--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -29,8 +29,8 @@
         <ul class="nav_list">
             <li class="nav_searchbar">
             </li>
-            <li><a href="" class="nav_tours_link">Tours</a></li>
-            <li><a href="" class="nav_about_link">About</a></li>
+            <li><a href="../tours" class="nav_tours_link">Tours</a></li>
+            <li><a href="about.html" class="nav_about_link">About</a></li>
             <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
         </ul>
     </nav>
