made unformatted tables for each developer profile

--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -25,7 +25,75 @@
   <h2>About Us</h2>
 
   <table>
-    <
+    <tr>
+      <td>Dhana Acharya</td>
+    </tr>
+    <tr>
+      <td><img src="../images/developers/dhana.png"></td>
+      <td>
+        DHANA WRITE YOUR BIO HERE
+      </td>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <td>Aisha Bluem</td>
+    </tr>
+    <tr>
+      <td><img src="../images/developers/aisha.png"></td>
+      <td>
+        AISHA WRITE YOUR BIO HERE
+      </td>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <td>Joe Buckley</td>
+    </tr>
+    <tr>
+      <td><img src="../images/developers/joe.png"></td>
+      <td>
+        JOE WRITE YOUR BIO HERE
+      </td>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <td>Scott Jankowski</td>
+    </tr>
+    <tr>
+      <td><img src="../images/developers/scott.png"></td>
+      <td>
+        SCOTT WRITE YOUR BIO HERE
+      </td>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <td>Victor Negron</td>
+    </tr>
+    <tr>
+      <td><img src="../images/developers/victor.png"></td>
+      <td>
+        VICTOR WRITE YOUR BIO HERE
+      </td>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+      <td>Gian Ramirez</td>
+    </tr>
+    <tr>
+      <td><img src="../images/developers/gian.png"></td>
+      <td>
+        GIAN WRITE YOUR BIO HERE
+      </td>
+    </tr>
   </table>
 
   <div id="return">
