--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -3,8 +3,9 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/about.css">
     <meta charset="UTF-8">
-    <title>FAQ</title>
+    <title>About Us</title>
 </head>
 <body>
 
@@ -24,77 +25,79 @@
 
   <h2>About Us</h2>
 
-  <table>
-    <tr>
-      <td>Dhana Acharya</td>
-    </tr>
-    <tr>
-      <td><img src="../images/developers/dhana.png"></td>
-      <td>
-        DHANA WRITE YOUR BIO HERE
-      </td>
-    </tr>
-  </table>
+  <section class="container">
+    <table>
+      <th>
+        <td>Dhana Acharya</td>
+      </th>
+      <tr>
+        <td><img src="../images/developers/dhana.png"></td>
+        <td>
+          DHANA WRITE YOUR BIO HERE
+        </td>
+      </tr>
+    </table>
 
-  <table>
-    <tr>
-      <td>Aisha Bluem</td>
-    </tr>
-    <tr>
-      <td><img src="../images/developers/aisha.png"></td>
-      <td>
-        AISHA WRITE YOUR BIO HERE
-      </td>
-    </tr>
-  </table>
+    <table>
+      <th>
+        <td>Aisha Bluem</td>
+      </th>
+      <tr>
+        <td><img src="../images/developers/aisha.png"></td>
+        <td>
+          AISHA WRITE YOUR BIO HERE
+        </td>
+      </tr>
+    </table>
 
-  <table>
-    <tr>
-      <td>Joe Buckley</td>
-    </tr>
-    <tr>
-      <td><img src="../images/developers/joe.png"></td>
-      <td>
-        JOE WRITE YOUR BIO HERE
-      </td>
-    </tr>
-  </table>
+    <table>
+      <th>
+        <td>Joe Buckley</td>
+      </th>
+      <tr>
+        <td><img src="../images/developers/joe.png"></td>
+        <td>
+          JOE WRITE YOUR BIO HERE
+        </td>
+      </tr>
+    </table>
 
-  <table>
-    <tr>
-      <td>Scott Jankowski</td>
-    </tr>
-    <tr>
-      <td><img src="../images/developers/scott.png"></td>
-      <td>
-        SCOTT WRITE YOUR BIO HERE
-      </td>
-    </tr>
-  </table>
+    <table>
+      <th>
+        <td>Scott Jankowski</td>
+      </th>
+      <tr>
+        <td><img src="../images/developers/scott.png"></td>
+        <td>
+          SCOTT WRITE YOUR BIO HERE
+        </td>
+      </tr>
+    </table>
 
-  <table>
-    <tr>
-      <td>Victor Negron</td>
-    </tr>
-    <tr>
-      <td><img src="../images/developers/victor.png"></td>
-      <td>
-        VICTOR WRITE YOUR BIO HERE
-      </td>
-    </tr>
-  </table>
+    <table>
+      <th>
+        <td>Victor Negron</td>
+      </th>
+      <tr>
+        <td><img src="../images/developers/victor.png"></td>
+        <td>
+          VICTOR WRITE YOUR BIO HERE
+        </td>
+      </tr>
+    </table>
 
-  <table>
-    <tr>
-      <td>Gian Ramirez</td>
-    </tr>
-    <tr>
-      <td><img src="../images/developers/gian.png"></td>
-      <td>
-        GIAN WRITE YOUR BIO HERE
-      </td>
-    </tr>
-  </table>
+    <table>
+      <th>
+        <td>Gian Ramirez</td>
+      </th>
+      <tr>
+        <td><img src="../images/developers/gian.png"></td>
+        <td>
+          GIAN WRITE YOUR BIO HERE
+        </td>
+      </tr>
+    </table>
+  </section>
 
   <div id="return">
     <a href="/">Return Home</a>
