tweaked links for about page on other pages

--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -100,7 +100,7 @@
   </section>
 
   <div id="return">
-    <a href="/">Return Home</a>
+    <a href="index.html">Return Home</a>
   </div>
 
   <hr>
