--- a/src/main/resources/static/pages/faq.html
+++ b/src/main/resources/static/pages/faq.html
@@ -16,7 +16,7 @@
                 <section class="searchbar"></section>
             </li>
             <li><a href="" class="nav_tours_link">Tours</a></li>
-            <li><a href="" class="nav_about_link">About</a></li>
+            <li><a href="about.html" class="nav_about_link">About</a></li>
             <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
         </ul>
     </nav>
@@ -50,7 +50,7 @@
   </ol>
 
   <div id="return">
-    <a href="/">Return Home</a>
+    <a href="index.html">Return Home</a>
   </div>
 
   <hr>
