--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -49,7 +49,7 @@
     <section class="middle_container">
         <div class="bird_part">
             <p class="bird_watching">Bird Watching</p>
-            <img src="../images/toucan.jpg" alt="" class="bird_pic">
+            <img src="../images/birds/toucan.jpg" alt="" class="bird_pic">
         </div>
         <p class="bird_watching_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptate
             expedita hic nesciunt fugiat nobis, vitae omnis ut, modi alias unde, et dolor quasi a ab ad sed numquam
