Added my bio to about us - fixed footer to match homepage - fixed link of bird pic on homepage -linked terms & conditions page to footer -added tours name text in homepage

--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/about.css">
-    <meta charset="UTF-8">
-    <title>About Us</title>
+  <meta charset="UTF-8">
+  <title>About Us</title>
 </head>
+
 <body>
 
   <header>
     <nav class="navbar">
-        <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
-        <ul class="nav_list">
-            <li class="nav_searchbar">
-                <section class="searchbar"></section>
-            </li>
-            <li><a href="../tours" class="nav_tours_link">Tours</a></li>
-            <li><a href="about.html" class="nav_about_link">About</a></li>
-            <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
-        </ul>
+      <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+      <ul class="nav_list">
+        <li class="nav_searchbar">
+          <section class="searchbar"></section>
+        </li>
+        <li><a href="../tours" class="nav_tours_link">Tours</a></li>
+        <li><a href="about.html" class="nav_about_link">About</a></li>
+        <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -28,7 +30,7 @@
   <section class="container">
     <table>
       <th>
-        <td>Dhana Acharya</td>
+      <td>Dhana Acharya</td>
       </th>
       <tr>
         <td><img src="../images/developers/dhana.png"></td>
@@ -40,7 +42,7 @@
 
     <table>
       <th>
-        <td>Aisha Bluem</td>
+      <td>Aisha Bluem</td>
       </th>
       <tr>
         <td><img src="../images/developers/aisha.png"></td>
@@ -52,7 +54,7 @@
 
     <table>
       <th>
-        <td>Joe Buckley</td>
+      <td>Joe Buckley</td>
       </th>
       <tr>
         <td><img src="../images/developers/joe.png"></td>
@@ -64,7 +66,7 @@
 
     <table>
       <th>
-        <td>Scott Jankowski</td>
+      <td>Scott Jankowski</td>
       </th>
       <tr>
         <td><img src="../images/developers/scott.png"></td>
@@ -76,7 +78,7 @@
 
     <table>
       <th>
-        <td>Victor Negron</td>
+      <td>Victor Negron</td>
       </th>
       <tr>
         <td><img src="../images/developers/victor.png"></td>
@@ -88,12 +90,19 @@
 
     <table>
       <th>
-        <td>Gian Ramirez</td>
+      <td>Gian Ramirez</td>
       </th>
       <tr>
         <td><img src="../images/developers/gian.png"></td>
         <td>
-          GIAN WRITE YOUR BIO HERE
+          I’m an experienced Human Resource professional currently working as an HR Partner for
+          Amazon, with over 7 years of experience leading teams to achieving goals.
+          This year, I’m fulfilling a personal goal by pivoting in my career to pursue a future in Tech. After
+          learning Python and other languages on my own, I decided to enroll in an amazing bootcamp, WCCI, that
+          has an accelerated approach to teaching and training future Software Engineers. Upon completion of my
+          certification, I will be pursuing a position that will enhance my career. This position would challenge
+          me to continue to learn, grow my knowledge and push me to construct and deliver software that will make
+          a difference.
         </td>
       </tr>
     </table>
@@ -106,8 +115,11 @@
   <hr>
 
   <footer>
-    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+    <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
+        Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
+      Reserved.</p>
   </footer>
 
 </body>
+
 </html>
