Update index.html text

--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -45,9 +45,14 @@
             <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="Pic of rainforest">
         </div>
         <h2 class="jac_intro">JAC Enterprises</h2>
-        <p class="intro">JAC Enterprises is an organization that specializes in offering niche adventures dedicated to
-            learning about Earth's various ecosystems and unique terrains. Our motto is, "Vincit Qui Se Vincit" which
-            means, "He/she conquers who conquers him/herself."</p>
+        <p class="intro">Join JAC Enterprises on an adventure to see some of the world's most beautiful birds
+            in one of the planet's most biodiverse regions, the Amazon River Basin. Over one thousand species of
+            birds make their home there. Our tour locations were chosen to highlight some of the area's most interesting species and habitats.
+            We designed our tours to have minimal effect on the environment, and proceeds from each tour fund local conservation efforts.<br><br>
+
+            Our motto is, "Vincit Qui Se Vincit" which means, "One conquers who conquers oneself. You have conquered
+            yourself, and have achieved much. Now is time to enjoy the fruits of your conquest. Book today for an experience
+            you will treasure forever.</p>
     </section>
 
     <section class="middle_container">
@@ -55,9 +60,11 @@
             <p class="bird_watching">Bird Watching</p>
             <img src="../images/birds/toucan.jpg" alt="" class="bird_pic">
         </div>
-        <p class="bird_watching_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptate
-            expedita hic nesciunt fugiat nobis, vitae omnis ut, modi alias unde, et dolor quasi a ab ad sed numquam
-            tempora.</p>
+        <p class="bird_watching_info">Birdwatching is the recreational observation and study of birds.
+            This activity gets millions of people around the world out of doors enjoying wildlife. Like hunting
+            and fishing, birdwatching offers the thrill of pursuing and tracking wild animals, but does so in a
+            much less intrusive way. Requiring little more than a pair of binoculars and a field guide, birdwatching
+            is possible anywhere, with birds living on all seven continents.</p>
     </section>
 
     <section class="bottom_container">
