added Bio to About Us

--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -71,7 +71,11 @@
       <tr>
         <td><img src="../images/developers/scott.png"></td>
         <td>
-          SCOTT WRITE YOUR BIO HERE
+          Born in Detroit, I moved to Columbus to attend graduate school at Ohio State. Although my focus was
+          Cognitive/Experimental Psychology, I learned some coding in order to write programs for my experiments.
+          After several years in logistics with Amazon, I decided to take up software development, continuing my
+          education at WCCI. When I am not coding, I enjoy herping, which is similar to birdwatching, but with
+          a focus on reptiles and amphibians.
         </td>
       </tr>
     </table>
