--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -87,7 +87,13 @@
       <tr>
         <td><img src="../images/developers/victor.png"></td>
         <td>
-          VICTOR WRITE YOUR BIO HERE
+          Im Victor, born in Cleveland, Ohio i always wanted to make the leap towards a tech career
+          but i never had the opportunity to so in the meantime i decided to practice coding on my own
+          and i always loved it. I did a few courses on udemy and learning through YouTube.
+          At the Start of 2022 i figured It's now or never so i got referred by a friend who completed the WCCI bootcamp.
+          So i decided to enroll to WCCI bootcamp, that has helped me learn in a fast pace environment and
+          im very amazed at the structure of the program. After my certification i will be using it to transition
+          into tech career and finally fulfilling my goal of pursuing a career in tech!
         </td>
       </tr>
     </table>
