Update tour model, populator populated

--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -71,7 +71,11 @@
       <tr>
         <td><img src="../images/developers/scott.png"></td>
         <td>
-          SCOTT WRITE YOUR BIO HERE
+          Born in Detroit, I moved to Columbus to attend graduate school at Ohio State. Although my focus was
+          Cognitive/Experimental Psychology, I learned some coding in order to write programs for my experiments.
+          After several years in logistics with Amazon, I decided to take up software development, continuing my
+          education at WCCI. When I am not coding, I enjoy herping, which is similar to birdwatching, but with
+          a focus on reptiles and amphibians.
         </td>
       </tr>
     </table>
@@ -83,7 +87,13 @@
       <tr>
         <td><img src="../images/developers/victor.png"></td>
         <td>
-          VICTOR WRITE YOUR BIO HERE
+          Im Victor, born in Cleveland, Ohio i always wanted to make the leap towards a tech career
+          but i never had the opportunity to so in the meantime i decided to practice coding on my own
+          and i always loved it. I did a few courses on udemy and learning through YouTube.
+          At the Start of 2022 i figured It's now or never so i got referred by a friend who completed the WCCI bootcamp.
+          So i decided to enroll to WCCI bootcamp, that has helped me learn in a fast pace environment and
+          im very amazed at the structure of the program. After my certification i will be using it to transition
+          into tech career and finally fulfilling my goal of pursuing a career in tech!
         </td>
       </tr>
     </table>
