--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -40,7 +40,7 @@
 
     <section class="top_container">
         <div class="amazon">
-            <h1 class="motto">Vincit Qui Se Vincit</h1>
+            <h1 class="motto">Birdwatching In Paradise</h1>
             <!--Bright bold white lettering over picture-->
             <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="Pic of rainforest">
         </div>
