--- a/src/main/resources/static/pages/index.html
+++ b/src/main/resources/static/pages/index.html
@@ -31,9 +31,10 @@
             <ul class="nav_list">
                 <li class="nav_searchbar">
                 </li>
-                <li><a href="../tours" class="nav_tours_link">Tours</a></li>
-                <li><a href="about.html" class="nav_about_link">About</a></li>
-                <li><a href="faq.html" class="nav_faq_link">Faq</a></li>
+                <li><a href="../pages/index.html" class="nav_home_link">Home</a></li>
+                <li><a href="../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
+                <li><a href="../pages/about.html" class="nav_about_link">About</a></li>
+                <li><a href="../pages/faq.html" class="nav_faq_link">Faq</a></li>
             </ul>
         </nav>
     </header>
@@ -70,11 +71,11 @@
     <section class="bottom_container">
         <div class="tours_part">
             <h2 class="tours_heading">Tours We Offer</h2>
-            <p class="tours_text_over_image">Sky Walk Tour</p>
+            <!-- <p class="tours_text_over_image">Sky Walk Tour</p> -->
             <img src="../images/canopywalk.jpg" alt="Picture of Canopy Bridge" class="skywalk_pic_link">
-            <p class="tours_text_over_image">Riverboat Tour</p>
+            <!-- <p class="tours_text_over_image">Riverboat Tour</p> -->
             <img src="../images/riverhomepgpic.jpg" alt="" class="riverboat_pic_link">
-            <p class="tours_text_over_image">Hiking Tour</p>
+            <!-- <p class="tours_text_over_image">Hiking Tour</p> -->
             <img src="../images/hikehomepgpic.jpg" alt="Picture of Forest" class="hiking_pic_link">
         </div>
     </section>
