--- a/src/main/resources/static/pages/terms-and-conditions.html
+++ b/src/main/resources/static/pages/terms-and-conditions.html
@@ -12,8 +12,49 @@
     <title>JAC Enterprises Terms & Conditions</title>
 </head>
 
+<header>
+
+    <nav class="navbar">
+
+        <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
+        <div class="searchbar">
+            <form th:action="@{/}">
+                Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+                &nbsp;
+                <input type="submit" value="Search" />
+                &nbsp;
+                <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+            </form>
+        </div>
+        <ul class="nav_list">
+            <li class="nav_searchbar">
+            </li>
+            <li><a href="../pages/index.html" class="nav_home_link">Home</a></li>
+            <li><a href="../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
+            <li><a href="../pages/about.html" class="nav_about_link">About</a></li>
+            <li><a href="../pages/faq.html" class="nav_faq_link">Faq</a></li>
+        </ul>
+    </nav>
+</header>
+
 <body>
-    <h1>Use of the Services</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores voluptatibus quam odio, eligendi deserunt dolorum dolorem iste animi dolores non libero error. Ratione molestias, est esse qui dolores ullam minima?  </p>
+    <h1 class="terms_h">Use of the Services</h1>
+        <div style="text-align: center">
+        <li class="terms_list">By visiting our site and booking a tour from us, you are waiving your legal rights to hold JAC Enterprises accountable for any and all types of injuries and/or death.</li> 
+        <li class="terms_list">You also allow the website to track and trace your browser, collect, use and share your location data, and track via third-party cookies for purposes including advertising.</li> 
+        <li class="terms_list">This service can delete any content, including your account, they want without reason and without prior notice.</li>
+        <li class="terms_list">This service can change the terms at any time at their discretion without notice to the user.</li>
+        </div>
 </body>
+
+<div id="return">
+    <a href="index.html">Return Home</a>
+  </div>
+  <hr>
+
+<footer class="terms_f">
+    <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
+            Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
+        Reserved.</p>
+</footer>
 </html>
