i'm sorry i did this under main but the tourstemplate is fixed

--- a/src/main/resources/static/pages/about.html
+++ b/src/main/resources/static/pages/about.html
@@ -28,7 +28,7 @@
         <ul class="nav_list">
             <li class="nav_searchbar">
             </li>
-            <li><a href="../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
+            <li><a href="../../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
             <li><a href="../pages/about.html" class="nav_about_link">About</a></li>
             <li><a href="../pages/faq.html" class="nav_faq_link">Faq</a></li>
         </ul>
@@ -57,7 +57,10 @@
       <tr>
         <td><img src="../images/developers/aisha.png"></td>
         <td>
-          AISHA WRITE YOUR BIO HERE
+          Hi! My name is Aisha (phonetic spelling: ay-zhuh).
+          I am a junior full-stack software developer pursuing my passion in coding,
+          reigniting the days of my youth where I'd make front-end websites of my
+          favorite cartoon/video game characters in the early and late 2000s.
         </td>
       </tr>
     </table>
