--- a/src/main/resources/static/pages/terms-and-conditions.html
+++ b/src/main/resources/static/pages/terms-and-conditions.html
@@ -30,7 +30,7 @@
             <li class="nav_searchbar">
             </li>
             <li><a href="../pages/index.html" class="nav_home_link">Home</a></li>
-            <li><a href="../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
+            <li><a href="../../templates/toursTemplate.html" class="nav_tours_link">Tours</a></li>
             <li><a href="../pages/about.html" class="nav_about_link">About</a></li>
             <li><a href="../pages/faq.html" class="nav_faq_link">Faq</a></li>
         </ul>
