edited 404 page and tour image links

--- a/src/main/resources/public/error/404.html
+++ b/src/main/resources/public/error/404.html
@@ -37,11 +37,9 @@
     </nav>
 </header>
 
-<h1 class="terms_h">404 Page is Out of Order</h1>
+<h1 class="terms_h">404 | This Page Does Not Exist</h1>
 <p>
-    We apologize for the inconvenience. We're working on training
-    more birds to help us fetch your search results.
-    Thank you for your patience!
+    Better luck nest time! *ba dum tss*
 </p>
 
 <img src="../images/other/silly-bird.png" class="center-image border-image">
